# Revit-2-Comfyui

./: .aiexclude  .gitignore  App.config  GEMINI.md  README.md  WabiSabiApplication.cs  WabiSabiRevitBridge.addin  WabiSabiRevitBridge.code-workspace  WabiSabiRevitBridge.csproj  build.ps1  idea_cache.txt  logs.txt  revit_wabisabi_bridge.txt
ComfyUI_WabiSabi_Bridge/: __init__.py  comfyui_wabisabi_bridge.txt  requirements.txt  wabisabi_nodes.py
ComfyUI_WabiSabi_Bridge/nodes/: __init__.py  base_node.py  batch_processor_node.py  camera_sync_node.py  command_node.py  lighting_control_node.py  metadata_node.py  preview_widget.py  segmentation_node.py  watch_image_node.py
Communication/: CommunicationManager.cs
Communication/Channels/: FileCommunicationChannel.cs  NamedPipeCommunicationChannel.cs  SharedMemoryCommunicationChannel.cs
Core/Cache/: CacheManager.cs  ImageCacheHelper.cs
Core/Interfaces/: ICommunicationChannel.cs  IConfigurationService.cs  IDataExtractor.cs
Core/Models/: CommunicationMessage.cs  ExportData.cs  WabiSabiConfiguration.cs
Core/Services/: ConfigurationService.cs  DependencyContainer.cs
ExternalRenderer/: CMakeLists.txt  build.bat  download_stb.bat  estructura.txt  test_mmf.bat
ExternalRenderer/config/: category_colors.csv  renderer_config.json
ExternalRenderer/src/: main.cpp
ExternalRenderer/src/core/: ImageMMFWriter.cpp  ImageMMFWriter.h  MemoryMappedFile.cpp  MemoryMappedFile.h  SharedMemory.h  WabiSabiExternalRenderer.h  WabiSabiRenderer.cpp  WabiSabiRenderer.h
ExternalRenderer/src/cuda/: CudaHelpers.h  CudaMath.h  WabiSabiKernels.cu  WabiSabiKernels.cu.txt  WabiSabiKernels.cuh  WabiSabiKernels.cuh.txt
ExternalRenderer/src/utils/: Base64.h  CSVReader.cpp  CSVReader.h  JournalParser.cpp  JournalParser.cpp.txt  JournalParser.h
ExternalRenderer/web-viewer/: WabiSabiViewer.js  index.html  package-lock.json  package.json  server.js
Extractors/: DepthExtractor.cs  HiddenLineExtractor.cs  MetadataExtractor.cs  NormalMapExtractor.cs  SegmentationExtractor.cs
Extractors/Base/: BaseExtractor.cs
Properties/: AssemblyInfo.cs
UI/Commands/: RelayCommand.cs  ShowMainWindowCommand.cs
UI/ViewModels/: MainViewModel.cs
UI/Views/: MainWindow.xaml  MainWindow.xaml.cs
Utils/: ImageHelper.cs  PerformanceMonitor.cs  RevitHelper.cs
comfyui workflow type/: REVIT2COMFY.json
docs/: Estructura_Archivos.md  Guía_de_Desarrollo-Development_Guide.md  Optimization Strategy.txt  README.TXT  README.md  Renderizador_Externo.txt  bitacora_journal.txt  idea_cache.txt  plan_caché.txt  real_time_link.txt  revit_wabisabi_bridge.txt
scripts/: Build.ps1  BuildClean.bat  BuildDotnet.bat  CleanBuild.bat  FixVersionBuild.bat  Uninstall.bat  UpdateToV02.bat  UpdateToV021.bat  debug_mmf_reader.py
src/: Build.bat  JournalMonitor.cs  ModernProgressDialog.cs  OptimizedAutoExportManager.cs  WabiSabiBridge.addin  WabiSabiBridge.cs  WabiSabiBridge.csproj  WabiSabiBridge.csproj.txt  WabiSabiBridge.sln  WabiSabiLogger.cs
src/DirectContext/: CameraData.cs  CameraDataExtractionServer.cs  LockFreeCameraRingBuffer.cs  SerializableCameraData.cs
src/Extractors/: DepthExtractor.cs  DepthExtractorFast.cs
src/Extractors/Cache/: GeometryCacheManager.cs
src/Extractors/Gpu/: ComputeSharpStubs.cs  GpuAccelerationBase.cs  GpuAccelerationSimple.cs  GpuSharedTypes.cs
src/Properties/: Resources.Designer.cs  Settings.Designer.cs  launchSettings.json
